--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>Joshua sheridan</title>
+    <title>Joshua Sheridan</title>
 
     <!-- Bootstrap Core CSS -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
@@ -32,8 +32,8 @@
 
 <body>
 
-    <div class="brand">Business Casual</div>
-    <div class="address-bar">3481 Melrose Place | Beverly Hills, CA 90210 | 123.456.7890</div>
+    <div class="brand">Joshua Sheridan</div>
+    <div class="address-bar">Tri-Tech Skills Center | Kennewick, WA, 99336 | 10.183.2.20</div>
 
     <!-- Navigation -->
     <nav class="navbar navbar-default" role="navigation">
@@ -56,10 +56,10 @@
                         <a href="index.html">Home</a>
                     </li>
                     <li>
-                        <a href="about.html">About</a>
+                        <a href="about.html">About Me</a>
                     </li>
                     <li>
-                        <a href="blog.html">Blog</a>
+                        <a href="blog.html">Projects</a>
                     </li>
                     <li>
                         <a href="contact.html">Contact</a>
