--- a/blog.html
+++ b/blog.html
@@ -56,7 +56,7 @@
                         <a href="index.html">Home</a>
                     </li>
                     <li>
-                        <a href="about.html">About</a>
+                        <a href="about.html">About Me</a>
                     </li>
                     <li>
                         <a href="blog.html">Projects</a>
@@ -84,11 +84,11 @@
                 </div>
                 <div class="col-lg-12 text-center">
                     <img class="img-responsive img-border img-full" src="img/slide-1.jpg" alt="">
-                    <h2>Post Title
+                    <h2>Projects
                         <br>
-                        <small>October 13, 2013</small>
+                        <small></small>
                     </h2>
-                    <p>Lid est laborum dolo rumes fugats untras. Etharums ser quidem rerum facilis dolores nemis omnis fugats vitaes nemo minima rerums unsers sadips amets. Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo.</p>
+                    <p>This is a page made for my personal projects that I do in the Cyber-Security Program and I will post them all here including my personal web server and a link to a few of the web pages i have designed peresonally. </p>
                     <a href="#" class="btn btn-default btn-lg">Read More</a>
                     <hr>
                 </div>
