--- a/blog.html
+++ b/blog.html
@@ -94,21 +94,21 @@
                 </div>
                 <div class="col-lg-12 text-center">
                     <img class="img-responsive img-border img-full" src="img/slide-2.jpg" alt="">
-                    <h2>Post Title
+                    <h2>Personal Web Server
                         <br>
-                        <small>October 13, 2013</small>
+                        <small></small>
                     </h2>
-                    <p>Lid est laborum dolo rumes fugats untras. Etharums ser quidem rerum facilis dolores nemis omnis fugats vitaes nemo minima rerums unsers sadips amets. Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo.</p>
+                    </p> This web server is based off of my Linux box in the Cyber Security room and I can access it anytime my Linux box is turned on.  I personally designed a few of the pieces of this website but also I used bootstrap as the basis for each part of the site.   </p>
                     <a href="#" class="btn btn-default btn-lg">Read More</a>
                     <hr>
                 </div>
                 <div class="col-lg-12 text-center">
                     <img class="img-responsive img-border img-full" src="img/slide-3.jpg" alt="">
-                    <h2>Post Title
+                    <h2>Teen/Grad Project
                         <br>
-                        <small>October 13, 2013</small>
+                        <small></small>
                     </h2>
-                    <p>Lid est laborum dolo rumes fugats untras. Etharums ser quidem rerum facilis dolores nemis omnis fugats vitaes nemo minima rerums unsers sadips amets. Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo.</p>
+                    <p> This is a website that I designed using Google Sites for the Teen/Grad Program at Tri-Tech and this is my final project in this class that i learned a lot about designing websites and how to work with others along with getting some experience in the field of Web Design and Html coding along with working in Google Sites for a total of about 15-20 hours. </p>
                     <a href="#" class="btn btn-default btn-lg">Read More</a>
                     <hr>
                 </div>
