--- a/blog.html
+++ b/blog.html
@@ -99,7 +99,7 @@
                         <small></small>
                     </h2>
                     </p> This web server is based off of my Linux box in the Cyber Security room and I can access it anytime my Linux box is turned on.  I personally designed a few of the pieces of this website but also I used bootstrap as the basis for each part of the site.   </p>
-                    <a href="10.183.2.20" class="btn btn-default btn-lg">Read More</a>
+                    <a href="http://tritechsc.org/grads/" class="btn btn-default btn-lg">Read More</a>
                     <hr>
                 </div>
                 <div class="col-lg-12 text-center">
