--- a/blog.html
+++ b/blog.html
@@ -77,8 +77,8 @@
             <div class="box">
                 <div class="col-lg-12">
                     <hr>
-                    <h2 class="intro-text text-center">MY
-                        <strong>Projects</strong>
+                    <h2 class="intro-text text-center">Company
+                        <strong>blog</strong>
                     </h2>
                     <hr>
                 </div>
@@ -103,7 +103,7 @@
                     <hr>
                 </div>
                 <div class="col-lg-12 text-center">
-                    <img class="img-responsive img-border img-full" src="img/slide-3.jpg" alt="">
+                    <img class="img-responsive img-border img-full" src="grads.jpg" alt="">
                     <h2>Teen/Grad Project
                         <br>
                         <small></small>
