--- a/blog.html
+++ b/blog.html
@@ -103,7 +103,7 @@
                     <hr>
                 </div>
                 <div class="col-lg-12 text-center">
-                    <img class="img-responsive img-border img-full" src=grads.jpg alt="">
+                    <img class="img-responsive img-border img-full" src="img/grads.jpg" alt="">
                     <h2>Teen/Grad Project
                         <br>
                         <small></small>
