--- a/blog.html
+++ b/blog.html
@@ -93,7 +93,7 @@
                     <hr>
                 </div>
                 <div class="col-lg-12 text-center">
-                    <img class="img-responsive img-border img-full" src="img/slide-2.jpg" alt="">
+                    <img class="img-responsive img-border img-full" src="img/images.jpg" alt="">
                     <h2>Personal Web Server
                         <br>
                         <small></small>
