--- a/blog.html
+++ b/blog.html
@@ -83,7 +83,7 @@
                     <hr>
                 </div>
                 <div class="col-lg-12 text-center">
-                    <img class="img-responsive img-border img-full" src="img/slide-1.jpg" alt="">
+                    <img class="img-responsive img-border img-full" src="img/lightbulb.png" alt="">
                     <h2>Projects
                         <br>
                         <small></small>
