--- a/blog.html
+++ b/blog.html
@@ -83,7 +83,7 @@
                     <hr>
                 </div>
                 <div class="col-lg-12 text-center">
-                    <img class="img-responsive img-border img-full" src="img/lightbulb.png" alt="">
+                    <img class="img-responsive img-border img-full" src="img/laptop-color-design.jpg" alt="">
                     <h2>Projects
                         <br>
                         <small></small>
@@ -93,7 +93,7 @@
                     <hr>
                 </div>
                 <div class="col-lg-12 text-center">
-                    <img class="img-responsive img-border img-full" src="img/images.jpg" alt="">
+                    <img class="img-responsive img-border img-full" src="img/Linux.jpg" alt="">
                     <h2>Personal Web Server
                         <br>
                         <small></small>
