--- a/contact.html
+++ b/contact.html
@@ -56,10 +56,10 @@
                         <a href="index.html">Home</a>
                     </li>
                     <li>
-                        <a href="about.html">About</a>
+                        <a href="about.html">About Me</a>
                     </li>
                     <li>
-                        <a href="blog.html">Blog</a>
+                        <a href="blog.html">Projects</a>
                     </li>
                     <li>
                         <a href="contact.html">Contact</a>
