--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
                                 <img class="img-responsive img-full" src="img/laptop-color-design.jpg" alt="">
                             </div>
                             <div class="item">
-                                <img class="img-responsive img-full" src="img/Mads.jpg" alt="">
+                                <img class="img-responsive img-full" src="img/computer-science-icon.jpg" alt="">
                             </div>
                             <div class="item">
                                 <img class="img-responsive img-full" src="img/Linux.jpg" alt="">
