--- a/blog.html
+++ b/blog.html
@@ -94,12 +94,12 @@
                 </div>
                 <div class="col-lg-12 text-center">
                     <img class="img-responsive img-border img-full" src="img/Linux.jpg" alt="">
-                    <h2>Personal Web Server
+                    <h2>Personal Google Site
                         <br>
                         <small></small>
                     </h2>
-                    </p> This web server is based off of my Linux box in the Cyber Security room and I can access it anytime my Linux box is turned on.  I personally designed a few of the pieces of this website but also I used bootstrap as the basis for each part of the site.   </p>
-                    <a href="https://sites.google.com/a/tritechsc.org/joshs/" class="btn btn-default btn-lg">Read More</a>
+                    </p> I personally designed a few of the pieces of this website but also I used bootstrap as the basis for each part of the site. This Project helped me get familiar with the website and style of the Google Sites format and tech and I learned a lot of new things about Web Page design.    </p>
+                   <a href="https://sites.google.com/a/tritechsc.org/joshs/" class="btn btn-default btn-lg">Read More</a>
                     <hr>
                 </div>
                 <div class="col-lg-12 text-center">
